<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:textAppearance="?android:attr/textAppearanceListItemSmall">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?selectableItemBackgroundBorderless"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/crimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/categoryView"
            />

        <TextView
            android:id="@+id/outcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcome_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/outcomeView"/>

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dateView"/>

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locationView"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="74dp"/>

        <TextView
            android:id="@+id/categoryView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/outcomeView"
            app:layout_constraintEnd_toStartOf="@+id/expander"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="Theft"/>

        <TextView
            android:id="@+id/outcomeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/expander"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/categoryView"
            tools:text="Investigation"/>

        <TextView
            android:id="@+id/dateView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/expander"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/outcomeView"
            tools:text="Jan 2017"/>

        <TextView
            android:id="@+id/locationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/expander"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/dateView"
            />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/see_on_map"
            app:layout_constraintTop_toBottomOf="@id/locationView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/expander"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expand"
            android:src="@drawable/ic_expand_more"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Group
            android:id="@+id/collapseViewGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="outcomeView, outcomeLabel, locationView, locationLabel, mapButton, dateLabel, dateView"
            tools:visibility="visible"
            />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>